[tool.poetry]
name = "zanshin-sdk-python"
version = "0.1.0"
description = "Python SDK to access the Tenchi Security Zanshin API v1"
license = "Apache Software License"
authors = ["Tenchi Security <contact@tenchisecurity.com>"]
readme = "README.md"
packages = [{include = "zanshinsdk"}]
homepage = "https://github.com/tenchi-security/zanshin-sdk-python"
classifiers=[
        'Programming Language :: Python',
        'Programming Language :: Python :: 3',
        'Programming Language :: Python :: 3.8',
        'Programming Language :: Python :: 3.9',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Development Status :: 5 - Production/Stable',
        'Natural Language :: English',
        'Environment :: Other Environment',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Topic :: Security',
        'Topic :: Software Development :: Libraries',
    ]
[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.33.13"
httpx = "^0.23.1"
pydantic = "^2.5.3"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
