[tool.poetry]
name = "zanshin-sdk-python"
version = "0.1.0"
description = "Python SDK to access the Tenchi Security Zanshin API v1"
license = "Apache Software License"
authors = ["Tenchi Security <contact@tenchisecurity.com>"]
readme = "README.md"
packages = [{include = "zanshinsdk"}]
homepage = "https://github.com/tenchi-security/zanshin-sdk-python"
classifiers=[
        'Programming Language :: Python :: 3.7',
        'Development Status :: 5 - Production/Stable',
        'Natural Language :: English',
        'Environment :: Other Environment',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Topic :: Security',
        'Topic :: Software Development :: Libraries',
    ]
[tool.poetry.dependencies]
python = "^3.7"
boto3 = "1.33.13"
httpx = "0.23.1"
pydantic = "2.5.3"

[tool.poetry.group.dev.dependencies]
coverage = "7.2.7"
mkdocs = "1.5.3"
mkdocs-material = "9.0.12"
mkdocstrings-python = "1.1.2"
moto = {version = "4.2.14", extras = ["all"]}
pre-commit = "2.21.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
