[tool.poetry]
name = "zanshinsdk"
version = "0.1.0"
description = "Python SDK to access the Tenchi Security Zanshin API v1"
license = "Apache Software License"
authors = ["Tenchi Security <contact@tenchisecurity.com>"]
readme = "README.md"
packages = [{include = "zanshinsdk"}]
homepage = "https://github.com/tenchi-security/zanshin-sdk-python"
classifiers=[
        'Programming Language :: Python',
        'Programming Language :: Python :: 3.10',
        'Programming Language :: Python :: 3.11',
        'Programming Language :: Python :: 3.12',
        'Programming Language :: Python :: 3.13',
        'Programming Language :: Python :: 3.14',
        'Development Status :: 5 - Production/Stable',
        'Natural Language :: English',
        'Environment :: Other Environment',
        'Intended Audience :: Developers',
        'Intended Audience :: System Administrators',
        'License :: OSI Approved :: Apache Software License',
        'Operating System :: OS Independent',
        'Topic :: Security',
        'Topic :: Software Development :: Libraries',
    ]
[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.84"
httpx = "^0.28.1"
pydantic = "^2.7.1"
poetry-plugin-export = "^1.8.0"
urllib3 = "^1.26.20"

[tool.poetry.group.dev.dependencies]
coverage = "^7.1.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.12"
mkdocstrings-python = "^1.10.0"
openapi-schema-validator = "^0.6.2"
moto = {version = "4.0.9", extras = ["all"]}
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core", "setuptools"]
build-backend = "poetry.core.masonry.api"
